src/test/deca/syntax/valid/created/parser/WithoutObjectExpressions/HelloWithoutQuote.deca
// Description:
//  Affichage d'un identifier Hello.
// Resultats:
//  C'est syntaxiquement correct.
{
    println(Hello);
}