src/test/deca/syntax/invalid/created/parser/WithoutObjectExpressions/BackslashPrint.deca
// Description:
//  Print un backslash seul.
// Resultats:
//  BackslashPrint.deca:6:12: token recognition error at: '"\");\n}'
{
    println("\");
}